# farma

./: .gitignore  README.md  main.py  pyproject.toml
data/: counties.geojson  drive_times.csv  drive_times_raw.json  pharmacies.json  pharmacy_access_map.html  scenario_drive_times.json  target_region.geojson
data/addresses/: README.md  four-county-2500-addresses.csv
data/addresses/original-sample-10pct-by-county/: Caledonia-County-1833-addresses.csv  Lamoille-County-1523-addresses.csv  Orleans-County-1820-addresses.csv  Washington-County-2970-addresses.csv
notebooks/: pharmacy_access.ipynb
